项目初始化

--- a/doc/开发步骤等内容.md
+++ b/doc/开发步骤等内容.md
@@ -2,6 +2,9 @@
 
 ### 安装插件
 django
+django-simple-captcha 
+
+
 
 ### 创建项目
 
@@ -19,3 +22,29 @@ except ImportError:
 
 通过这个方法，可以把个性化的账号密码等信息配置到独立的文件中，避免将这些信息上传到服务器中。
 
+django-simple-captcha插件用于图形验证码的使用。
+
+关于此插件的添加使用：
+- 安装后需要在总路由中配置
+```path(r'^captcha/', include('captcha.urls')),```
+- setting.py的INSTALLED_APPS里面需要添加应用 captcha 。同时需要添加下面的配置
+```editorconfig
+# 图片字母验证码的配置
+CAPTCHA_IMAGE_SIZE = (80,45)    # 设置图片大小
+CAPTCHA_LENGTH = 4              # 字符个数
+CAPTCHA_TIMEOUT = 1             # 超时（单位：分钟）
+
+# 输出格式：输入框 验证码图片 隐藏域
+CAPTCHA_OUTPUT_FORMAT = '%(text_field)s %(image)s %(hidden_field)s'
+CAPTCHA_NOISE_FUNCTIONS = (
+    'captcha.helpers.noise_null',
+    # 'captcha.helpers.noise_arcs',
+    'captcha.helpers.noise_dots',
+)
+
+# 随机字符验证码
+CAPTCHA_CHALLENGE_FUNCT = 'captcha.helpers.random_char_challenge'
+```
+- ModelFrom中只需初始化验证码区域。如：code=CaptchaField()
+
+### 
