修改验证码刷新问题

--- a/doc/开发步骤等内容.md
+++ b/doc/开发步骤等内容.md
@@ -1,4 +1,6 @@
-## 
+## 开发中一些重要步骤的记录
+
+
 
 ### 安装插件
 django
@@ -48,3 +50,4 @@ CAPTCHA_CHALLENGE_FUNCT = 'captcha.helpers.random_char_challenge'
 - ModelFrom中只需初始化验证码区域。如：code=CaptchaField()
 
 ### 
+
