处理好登录的静态页面

--- a/doc/开发步骤等内容.md
+++ b/doc/开发步骤等内容.md
@@ -49,5 +49,34 @@ CAPTCHA_CHALLENGE_FUNCT = 'captcha.helpers.random_char_challenge'
 ```
 - ModelFrom中只需初始化验证码区域。如：code=CaptchaField()
 
+-  关于验证码图片的刷新问题，在页面的js区域里面添加一下的内容，里面的#id_code_0需要根据实际在forms里面字段的定义名来修改code为对应的字段名
+
+  ```javascript
+      // 刷新验证码
+      $('.captcha').click(function(){
+          $.getJSON("/captcha/refresh/",
+                  function(result){
+                  $('.captcha').attr('src',result['image_url']);
+                  $('#id_code_0').val(result['key']) ;
+          });
+      })
+  ```
+
+  同时在全局的settings.py文件中需要添加一条路由
+
+  ```python
+  path(r'refresh/$', views.captcha_refresh, name='captcha-refresh'),
+  ```
+
+  
+
+- 
+
+
+
+
+
+
+
 ### 
 
